# ttdash

./: .gitignore  Cargo.toml  README.md  build-release.sh  genproto.sh  ttdash.service  upgrade.sh
cases/: case1.scad
doc/: cross-compiling.md  parts.md
src/: bustime.rs  debug.rs  display.rs  drawing.rs  main.rs  purpleair.rs  result.rs  structs.rs  subway.rs  update.rs  weather.rs  webclient_api.rs
testdata/: nwsapi.txt  purpleair.json
