[package]
name = "ttdash"
version = "0.1.0"
authors = ["Matt Jones <jonesmr@gmail.com>"]

[dependencies]
bytes = "*"
chrono = "*"
chrono-tz = "*"
flexi_logger = "*"
getopts = "*"
hex = "*"
image = "*"
imageproc = "*"
log = "*"
md-5 = "*"
nix = "*"
pretty-bytes = "*"
prost = "*"
querystring = "*"
reqwest = "*"
rppal = "*"
rusttype = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
simple-server = "*"

[build-dependencies]
prost-build = "*"

[profile.release]
lto = true
opt-level = 's'
